--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,7 @@ models/*.kears filter=lfs diff=lfs merge=lfs -text
 models/*.pkl filter=lfs diff=lfs merge=lfs -text
 results/*.csv filter=lfs diff=lfs merge=lfs -text
 results/forecasts/*.csv filter=lfs diff=lfs merge=lfs -text
+*.csv filter=lfs diff=lfs merge=lfs -text
+*.jpg filter=lfs diff=lfs merge=lfs -text
+*.png filter=lfs diff=lfs merge=lfs -text
+*.h5 filter=lfs diff=lfs merge=lfs -text
